# DistributedImageProcessing

./: README.md
client/src/: client.cpp  net.cpp
master/: CMakeLists.txt
master/include/: net.h
master/src/: master.cpp
server/src/: server.cpp
worker/: CMakeLists.txt
worker/src/: worker.cpp
